# calamex

./: .agent-write-test.txt  .dependency-cruiser.cjs  .gitignore  .npmrc  .size-limit.json  1.mjs  2.mjs  AGENTS.md  Cargo.toml  README.md  RESIZE_NOTES.md  acp-kimi-external-send-wiring.mjs  acp-usage-token-context-tests.mjs  acp-usage-token-context-wiring.mjs  add-git-history-graph.js  add-git-history-graph.sh  apply-FE2-and-P4-coldstart.mjs  apply-ai-panel-fixes.mjs  apply-editor-fixes.mjs  apply-fe2-tab-title.mjs  apply-file-explorer-fixes.mjs  apply-git-fixes.mjs  apply-p4-resize-debounce.mjs  apply-shell-fixes.mjs  apply-shellint-batch2.mjs  biome.json  build_output.txt  calamex-performance-fix-2.mjs  calamex-performance-fix-3.mjs  calamex-performance-fix-4.mjs  calamex-performance-fix.mjs  calamex-ultimate-performance-fix.mjs  cleanup-deepseek-provider-payload.mjs  commitlint.config.ts  components.json  deny.toml  fix-agent-webview-quality.mjs  fix-ai-activity-leak.mjs  fix-ai-hot-path-ux.mjs  fix-ai-prompt-border.mjs  (+64 more)
.cargo/: config.toml
agent-sidecar/: MATURITY.md  PACKAGING_PLAN.md  fix-tests-round3.mjs  fix-tsc.mjs  package.json  project-tree.txt  tsconfig.build.json  tsconfig.json
builtin-agent/: MATURITY.md  PACKAGING_PLAN.md  build.mjs  package.json  tsconfig.json
docs/: performance-budget-ab-followup.md  performance-budget.md  tech-debt.md
e2e/: startup-flow.spec.ts
reports/: ai-polish-2026-04-20.md
scripts/: 1.js  acp-align-ipc-agent-network-permission.mjs  acp-align-ipc-wire-types.mjs  acp-available-commands-frontend.mjs  acp-available-commands-rust-projection.mjs  acp-capture-session-modes.mjs  acp-current-mode-update.mjs  acp-get-session-modes-command.mjs  acp-receive-side-host-wiring.mjs  acp-session-modes-composer-selector.mjs  acp-session-modes-frontend-data.mjs  acp-set-session-mode.mjs  acp-slice-2b-ii.mjs  acp-slice-3.mjs  acp-terminal-frontend-vm.mjs  acp-usage-frontend.mjs  apply-acp-toolcalls.mjs  (+134 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: web-element-picker.generated.js
src-tauri/capabilities/: ai-index.json  ai-tools-readonly.json  ai-tools-write.json  ai.json  default.json  terminal.json  window.json  workspace-fs.json
src-tauri/scripts/: fix-use-ai-assistant-acp-spec.mjs
src-tauri/src/: launch.rs  lifecycle.rs  main.rs  process_guard.rs  storage_paths.rs  tauri_bindings.rs
src-tauri/src/acp/: approval.rs  bridge.rs  bridges.rs  client.rs  fs_bridge.rs  host.rs  launch.rs  mod.rs  provisioner.rs  runtime.rs  terminal_bridge.rs  turn.rs  ui_event.rs
src-tauri/src/agent_sidecar/: mod.rs  orchestrate.rs
src-tauri/src/ai/: audit.rs  credential.rs  errors.rs  favicon.rs  gateway.rs  mod.rs  openai_compatible.rs  provider.rs  redaction.rs  stream_manager.rs  token_budget.rs
src-tauri/src/ai/agent/: planner.rs  policy.rs
src-tauri/src/ai/approval/: journal.rs
src-tauri/src/ai/credential/: mod.rs
src-tauri/src/ai/edit/: errors.rs  mod.rs  patch.rs
src-tauri/src/ai/edit/apply/: auto_apply.rs
src-tauri/src/ai/edit/history/: blob_store.rs  edit_journal.rs  mod.rs  pins.rs  revert.rs  snapshot.rs
src-tauri/src/ai/edit/io/: file_transaction.rs  mod.rs  storage_lock.rs
src-tauri/src/ai/edit/security/: path_security.rs
src-tauri/src/ai/gateway/: config.rs  connection.rs  conversation.rs  mod.rs  model_config.rs  prompt.rs  suggestions.rs  tests.rs
src-tauri/src/ai/provider/: mod.rs
src-tauri/src/ai/security/: mod.rs  network_permission.rs  redaction.rs
src-tauri/src/ai/stream/: mod.rs
src-tauri/src/ai/transport/: mod.rs  sse.rs
src-tauri/src/ai_agent/: mod.rs  planner.rs  policy.rs  runtime.rs  step.rs  tool_call.rs
src-tauri/src/ai_context/: budget.rs  collector.rs  mod.rs  ranker.rs  references.rs  summarizer.rs
src-tauri/src/ai_edit/: diff_render.rs
src-tauri/src/ai_index/: embedding_index.rs  file_index.rs  incremental.rs  mod.rs  symbol_index.rs  text_index.rs
src-tauri/src/ai_patch/: apply.rs  mod.rs  parser.rs  preview.rs  rollback.rs  validator.rs
src-tauri/src/ai_tools/: get_diagnostics.rs  get_git_diff.rs  get_terminal_log.rs  mod.rs  propose_patch.rs  read_file.rs  registry.rs  run_test.rs  search_symbol.rs  search_text.rs
src-tauri/src/assets/: favicon.rs
src-tauri/src/commands/: agent_sidecar.rs  agent_webview.rs  ai.rs  attachment.rs  builtin_agent.rs  contracts.rs  error.rs  git.rs  lsp.rs  mod.rs  path_util.rs  script_run.rs  search.rs  shell_tools.rs  skills.rs  ssh.rs  ssh_pool.rs  terminal.rs  window.rs  window_paint.rs  window_stage.rs  workspace_fs.rs  workspace_watcher.rs
src-tauri/src/commands/ai/: agent.rs  edit.rs  gateway.rs  mod.rs  storage.rs  tools.rs
src-tauri/src/commands/contracts/: agent_orchestration.rs  agent_sidecar.rs  ai_agent.rs  ai_chat.rs  ai_config.rs  ai_edit.rs  builtin_agent.rs  format.rs  mod.rs  script.rs  secret.rs  skills.rs  ssh.rs  workspace.rs
src-tauri/src/commands/format/: error.rs  mod.rs  registry.rs  runner.rs
src-tauri/src/commands/git/: branches.rs  cli.rs  diff.rs  github_auth.rs  history.rs  pull_request.rs  revision.rs  stash.rs  status.rs  tests.rs  worktree_io.rs
src-tauri/src/commands/lsp/: commands.rs  diagnostics.rs  discovery.rs  io.rs  protocol.rs  types.rs
src-tauri/src/commands/search/: content_cache.rs  content_index.rs  find.rs  mod.rs  preview.rs  ranking.rs  replace.rs  scan.rs  stream.rs  types.rs  util.rs
src-tauri/src/commands/ssh/: config.rs  connection.rs  credentials.rs  hostkey.rs  transfer.rs  util.rs
src-tauri/src/commands/terminal/: commands.rs  events.rs  mod.rs  state.rs  tests.rs
src-tauri/src/terminal/: command_contracts.rs  dispatch.rs  flow_control.rs  local_wsl_protocol.rs  mod.rs  prompt.rs  registry.rs  shell_integration.rs  snapshot.rs  state_machine.rs  tauri_events.rs  types.rs  utf8_decoder.rs  visual.rs  vte_detect.rs  wsl.rs  wsl_pty.rs
src-tauri/src/wsl_link/: adapters.rs  agent.rs  agent_distribution.rs  e2e_tests.rs  grpc_transport.rs  mod.rs  noise_handshake.rs  noise_stream.rs  primary_supervisor.rs  retry.rs  smoke_tests.rs  terminal_client.rs  types.rs
(+1648 files in other folders)
