[workspace]
members = [
  "src-tauri",
]
resolver = "2"

[profile.release]
# 发布构建优化：缩小二进制体积并提升运行时性能。
# - lto = "thin"：跨 crate 链接时优化(thin 是性能与编译时间的平衡点)
# - codegen-units = 1：单编译单元,最大优化空间(代价是 release 编译变慢,发布构建可接受)
# - panic = "abort"：省去 unwinding 代码(应用不依赖 catch_unwind 恢复,见 deny.toml / 源码无使用)
# - strip = "debuginfo"：剥离调试信息体积,但保留符号名以保留可读的 panic 栈
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# 降低 dev(debug) 构建的内存/时间开销（profile 必须放 workspace 根，否则被 cargo 忽略）。
# 默认 debug=2 会让 calamex 二进制 LLVM 代码生成占大量内存，tauri dev 下易 OOM；
# line-tables-only 仍保留 panic 栈行号。
[profile.dev]
debug = "line-tables-only"

# 依赖不需要调试信息，进一步降低峰值内存与磁盘占用。
[profile.dev.package."*"]
debug = false
