[package]
name = "calamex"
version = "0.1.0"
description = "面向 Windows 的 Linux Shell 脚本编辑器"
edition = "2024"
build = "build.rs"
default-run = "calamex"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [], optional = true }

[features]
default = ["desktop", "native_webview"]
# 迁移期临时门控：启用宿主侧官方 ACP stdio 客户端（`cargo build --features acp_client`）。
# 默认构建不启用，保证 main 分支默认编译不受影响、整步可逆。
acp_client = ["dep:agent-client-protocol"]
# 原生承载内置浏览器（Tauri multiwebview 子 webview + 独立 user-data-folder + CDP 远程调试端口）。
# 默认启用（随 desktop 进 default）：AI 操作内置浏览器是产品核心能力，需开箱即用，不再走 iframe 旧路。
# 如需最小依赖构建可 `--no-default-features` 关闭（届时走 cfg stub 返回 Err）。
# 启用 tauri/unstable 以使用 Window::add_child 多 webview API；用弱依赖 `tauri?/unstable`。
native_webview = ["tauri?/unstable"]
desktop = [
  "dep:atomic-write-file",
  "dep:blake3",
  "dep:cap-std",

  "dep:diffy-imara",
  "dep:encoding_rs",
  "dep:fjall",
  "dep:gix",
  "dep:globset",
  "dep:grep-matcher",
  "dep:grep-regex",
  "dep:grep-searcher",
  "dep:ast-grep-core",
  "dep:ast-grep-language",
  "dep:ignore",
  "dep:keyring",
  "dep:normpath",
  "dep:nucleo-matcher",
  "dep:portable-pty",
  "dep:rayon",
  "dep:reqwest",
  "dep:regex",
  "dep:similar",
  "dep:tauri",
  "dep:tauri-build",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-store",
  "dep:tracing",
  "dep:tree-sitter",
  "dep:tree-sitter-bash",
]

[dependencies]
# 官方 Agent Client Protocol Rust SDK。钉到 v0.14.0 的 SACP 角色/构建器 API
# （该 rev 自身把 schema 依赖钉在已发布的 agent-client-protocol-schema =0.13.6）。
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "98b9792a014569f87404d48ed7521431369948c5", optional = true }
bytes = "1.7"
parking_lot = "0.12"
pin-project-lite = "0.2"
base64 = "0.22.1"
ast-grep-core = { version = "0.42.2", default-features = false, features = ["tree-sitter"], optional = true }
ast-grep-language = { version = "0.42.2", default-features = false, features = ["tree-sitter-bash"], optional = true }
diffy-imara = { version = "0.3.2", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
gix = { version = "0.84", default-features = false, features = ["max-performance-safe", "sha1", "revision", "index", "status", "blob-diff", "excludes", "tree-editor"], optional = true }
globset = { version = "0.4.18", optional = true }
grep-matcher = { version = "0.1.8", optional = true }
grep-regex = { version = "0.1.14", optional = true }
grep-searcher = { version = "0.1.16", optional = true }
ignore = { version = "0.4.25", optional = true }
notify = { version = "8.2.0" }
notify-debouncer-full = "0.5"
nucleo-matcher = { version = "0.3.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }
rayon = { version = "1.10", optional = true }
keyring = { version = "3.6.3", features = ["windows-native"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lsp-types = { version = "0.97", features = ["proposed"] }
similar = { version = "3.1.0", optional = true }
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2.7.0", optional = true }
tauri-plugin-store = { version = "~2", optional = true }
thiserror = "2.0.18"
trash = "5"
arc-swap = "1"
relative-path = { version = "1", features = ["serde"] }
bon = "3"
fs-err = { version = "3", features = ["tokio"] }
jwalk = "0.8"
tokio = { version = "1.52.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7"
tracing = { version = "0.1.44", optional = true }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
snow = "0.10.0"
getrandom = "0.3.4"
russh = { version = "0.61.1", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3.0"
blake3 = { version = "1.8.5", optional = true }
fjall = { version = "3.1.4", optional = true }
atomic-write-file = { version = "0.3.0", optional = true }
camino = { version = "1.2.2" }
cap-std = { version = "4.0.2", optional = true }
normpath = { version = "1.5.1", optional = true }
specta = { version = "2.0.0-rc.25", features = ["serde_json"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
log = "0.4.30"
jiff = "0.2.25"
backon = "1.6.0"
vte = "0.15.0"
tauri-plugin-opener = "2.5.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Hypervisor"] }
# WebView2 设置硬化所需：用于关闭浏览器加速键（修复 Ctrl+S 全屏白屏）。
# 版本与 wry 0.55.1 解析出的传递依赖完全一致，避免重复 crate 版本导致 .cast() 类型不匹配。
webview2-com = "=0.38.2"
windows-core = "=0.61.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
debug = true
