[package]
name = "calamex"
version = "0.1.0"
description = "Linux Shell script editor for Windows"
edition = "2024"
build = "build.rs"
default-run = "calamex"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [], optional = true }

[features]
default = ["desktop", "native_webview", "acp_client"]
acp_client = ["dep:agent-client-protocol", "agent-client-protocol/unstable_boolean_config"]
# Native-hosted built-in browser (Tauri multiwebview child + isolated user-data-folder + CDP port).
# CDP control plane needs chromiumoxide + futures (drives the event streams).
native_webview = ["tauri?/unstable", "dep:chromiumoxide", "dep:futures"]
desktop = [
  "dep:atomic-write-file",
  "dep:blake3",
  "dep:cap-std",

  "dep:diffy-imara",
  "dep:encoding_rs",
  "dep:fjall",
  "dep:gix",
  "dep:globset",
  "dep:grep-matcher",
  "dep:grep-regex",
  "dep:grep-searcher",
  "dep:ast-grep-core",
  "dep:ast-grep-language",
  "dep:ignore",
  "dep:keyring",
  "dep:mime_guess",
  "dep:normpath",
  "dep:nucleo-matcher",
  "dep:portable-pty",
  "dep:rayon",
  "dep:rustc-hash",
  "dep:reqwest",
  "dep:regex",
  "dep:sha2",
  "dep:similar",
  "dep:serde_yaml",
  "dep:slug",
  "dep:tauri",
  "dep:tauri-build",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-store",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:tree-sitter",
  "dep:tree-sitter-bash",
]

[dependencies]
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "98b9792a014569f87404d48ed7521431369948c5", optional = true }
bytes = "1.7"
parking_lot = "0.12"
pin-project-lite = "0.2"
base64 = "0.22.1"
ast-grep-core = { version = "0.42.2", default-features = false, features = ["tree-sitter"], optional = true }
ast-grep-language = { version = "0.42.2", default-features = false, features = ["tree-sitter-bash"], optional = true }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
diffy-imara = { version = "0.3.2", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
# 已是 reqwest/url 的传递依赖，此处显式声明以替换 src-tauri 内的手写 percent-encode/decode。
form_urlencoded = "1.2"
percent-encoding = "2.3"
futures = { version = "0.3", optional = true }
gix = { version = "0.84", default-features = false, features = ["max-performance-safe", "sha1", "revision", "index", "status", "blob-diff", "excludes", "tree-editor"], optional = true }
globset = { version = "0.4.18", optional = true }
grep-matcher = { version = "0.1.8", optional = true }
grep-regex = { version = "0.1.14", optional = true }
grep-searcher = { version = "0.1.16", optional = true }
ignore = { version = "0.4.25", optional = true }
mime_guess = { version = "2.0.5", optional = true }
notify = { version = "8.2.0" }
notify-debouncer-full = "0.5"
nucleo-matcher = { version = "0.3.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }
rayon = { version = "1.10", optional = true }
rustc-hash = { version = "2", optional = true }
keyring = { version = "3.6.3", features = ["windows-native"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"], optional = true }
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lsp-types = { version = "0.97", features = ["proposed"] }
sha2 = { version = "0.10", optional = true }
similar = { version = "3.1.0", optional = true }
serde_yaml = { package = "serde_yaml_ng", version = "0.10", optional = true }
slug = { version = "0.1", optional = true }
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2.7.0", optional = true }
tauri-plugin-store = { version = "~2", optional = true }
thiserror = "2.0.18"
trash = "5"
arc-swap = "1"
relative-path = { version = "1", features = ["serde"] }
bon = "3"
fs-err = { version = "3", features = ["tokio"] }
jwalk = "0.8"
tokio = { version = "1.52.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7"
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
snow = "0.10.0"
getrandom = "0.3.4"
russh = { version = "0.61.1", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.3.0"
blake3 = { version = "1.8.5", optional = true }
fjall = { version = "3.1.4", optional = true }
atomic-write-file = { version = "0.3.0", optional = true }
camino = { version = "1.2.2" }
cap-std = { version = "4.0.2", optional = true }
normpath = { version = "1.5.1", optional = true }
specta = { version = "2.0.0-rc.25", features = ["serde_json"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
log = "0.4.30"
jiff = "0.2.25"
backon = "1.6.0"
vte = "0.15.0"
# 子进程超时等待（cargo 自身亦使用）：替代 wsl_pty.rs 同步 wsl.exe 调用里的 25ms 轮询。
wait-timeout = "0.2"
tauri-plugin-opener = "2.5.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Hypervisor"] }
webview2-com = "=0.38.2"
windows-core = "=0.61.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
